<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.chris.lab4.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationA"
        android:textSize="20dp"
        android:id="@+id/a"/>
    <EditText
        android:id="@+id/boxA"
        android:layout_width="160dp"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationB"
        android:textSize="20dp"
        android:id="@+id/b"
        android:layout_below="@id/a"
        android:layout_marginTop="25dp"/>
    <EditText
        android:id="@+id/boxB"
        android:layout_width="160dp"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"
        android:layout_below="@id/a"
        android:layout_marginTop="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationC"
        android:textSize="20dp"
        android:id="@+id/c"
        android:layout_below="@id/b"
        android:layout_marginTop="25dp"/>
    <EditText
        android:id="@+id/boxC"
        android:layout_width="160dp"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"
        android:layout_below="@id/b"
        android:layout_marginTop="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationD"
        android:textSize="20dp"
        android:id="@+id/d"
        android:layout_below="@id/c"
        android:layout_marginTop="25dp"/>
    <EditText
        android:id="@+id/boxD"
        android:layout_width="160dp"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"
        android:layout_below="@id/c"
        android:layout_marginTop="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationE"
        android:textSize="20dp"
        android:id="@+id/e"
        android:layout_below="@id/d"
        android:layout_marginTop="25dp"/>
    <EditText
        android:id="@+id/boxE"
        android:layout_width="160dp"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"
        android:layout_below="@id/d"
        android:layout_marginTop="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationF"
        android:textSize="20dp"
        android:id="@+id/f"
        android:layout_below="@id/e"
        android:layout_marginTop="25dp"/>
    <EditText
        android:id="@+id/boxF"
        android:layout_width="160dp"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"
        android:layout_below="@id/e"
        android:layout_marginTop="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationG"
        android:textSize="20dp"
        android:id="@+id/g"
        android:layout_below="@id/f"
        android:layout_marginTop="25dp"/>
    <EditText
        android:id="@+id/boxG"
        android:layout_width="160dp"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"
        android:layout_below="@id/f"
        android:layout_marginTop="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/g"
        android:layout_marginTop="50dp"
        android:text="GO"
        android:onClick="goPressed"/>
</RelativeLayout>
